--- a/src/copmponents/header.css
+++ b/src/copmponents/header.css
@@ -45,3 +45,142 @@
     width: 100%;
     background-position:  center;
 }
+* {
+    padding: 0px;
+    margin: 0px;
+    border: none;
+    outline: none;
+    text-decoration: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    width: 100%;
+    min-height: 100%;
+}
+
+.homeContainer {
+    /* background-color: red;
+ 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    position: relative;
+    width: 100%;
+    height: 90.6vh;
+    /* background-color: #F5F5F5; */
+}
+
+.heading {
+    font-family: 'Rubik Puddles';
+    font-size: 128px;
+}
+
+.custom-grid-lines line {
+    stroke: red !important;
+}
+
+.detailsContainer {
+    background-image: url("../assets/images/04e47f07fc46d0dc6829875736f78713\ 3.jpg");
+    width: 100%;
+    height: 100%;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    /* padding-left: 1000px; */
+    height: 70px;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    font-size: 20px;
+    z-index: 999;
+    background-color: #EFEFEF;
+}
+
+.header-inner {
+    width: 90%;
+    /* display: flex; */
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav {
+    flex: 0.5;
+    display: flex;
+    justify-content: space-between;
+}
+
+.hamburger-btn {
+    font-size: 1.3rem;
+    position: absolute;
+    bottom: 0;
+    width: 40px;
+    height: 35px;
+    right: 30px;
+    outline: none;
+    border-radius: 3px;
+    background-color: black;
+    color: #8b9e9e;
+}
+
+.addTransiton {
+    transform: translateX(170px);
+    transition: transform 0.5s ease-in-out;
+}
+
+.removeTransition {
+    transform: translateX(20px);
+    transition: transform 0.5s ease-in-out;
+}
+
+#sidebar-list {
+    background-color: #8b9e9e;
+    height: 100vh;
+    width: 170px;
+    position: absolute;
+    z-index: 2000;
+    right: 0;
+    top: 0;
+    border-radius: 5px;
+    margin-top: 70px;
+}
+
+.nav-big {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    
+    /* margin-left: 60%; */
+}
+
+.nav-big-link {
+    cursor: pointer;
+    color: #8b9e9e;
+    padding-left: 20px;
+    padding-top:20px;
+    text-decoration: none !important;
+}
+
+.nav-small {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
+    margin: auto;
+    height: 40%;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.nav-small-link {
+    cursor: pointer;
+    color: whitesmoke;
+    padding-bottom: 5px;
+}
